<resources>
    <string name="app_name">StarTask</string>
    <string name="title_activity_parent_home">ParentHomeActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_family">MyFamily</string>
    <string name="add_task">Home</string>
    <string name="title_add_task">Task</string>
    <string name="Rewad">Reward</string>
    <string name="add_reward">Reward</string>
    <string name="title_history">History</string>
    <string name="title_activity_child_home">Child Home</string>
    <string name="Name_Task">Task</string>
    <string name="task_amount">Amount</string>
    <string name="Account">Account</string>
    <string name="btn_add_Task">+</string>
    <string name="LOGOUT">Logout</string>
    <string name="action_filter">Filter</string>
    <string name="filter_all">All</string>
    <string name="filter_active">Active</string>
    <string name="pref_notify_name">Notification</string>
    <string name="pref_notify_summary">Daily reminder for nearest active task.</string>
    <string name="pref_key_notify">key_notification</string>
    <string name="notification">Notification</string>
    <string name="STARTASK">STARTASK</string>
    <string name="create_family">Create Family</string>
    <string name="join_family">Join Family</string>
    <string name="join">Join</string>
    <string name="name">Name</string>
    <string name="family_id">Family Id</string>
    <string name="role">Choose your role</string>
    <string name="joinFamily">Join Family</string>
    <string name="createFamily">Create Family</string>
    <string name="create">Create</string>
    <string name="chose">Choose Child</string>
    <string name="createTask">Create Task</string>
    <string name="rewardname">Reward Name</string>
    <string name="createReward">Create Reward</string>

</resources>