<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_parent_task">
    <fragment
        android:id="@+id/navigation_parent_home"
        android:name="com.febrian.startask.ui.parent.ParentHomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_parent_home" />
    <fragment
        android:id="@+id/navigation_parent_task"
        android:name="com.febrian.startask.ui.parent.task.ParentTaskFragment"
        android:label="@string/add_task"
        tools:layout="@layout/fragment_parent_task" />
    <fragment
        android:id="@+id/navigation_parent_reward"
        android:name="com.febrian.startask.ui.parent.reward.ParentRewardFragment"
        android:label="@string/Rewad"
        tools:layout="@layout/fragment_parent_reward" />
</navigation>